--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
              </div>
              <a href="#" class="btn">See more</a>
-        </div>x
+        </div>
     </div>
 
     <!-- ---------Contact Form-------------------------------- -->
