--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset=utf-8>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width", intial-scale="1.0">
-        <title>Rusith Portfolio</title>
+        <link rel="icon" href="images/logo.png" type="image/png">
+        <title>
+            Rusith Portfolio
+        </title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/48c23fc601.js" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
@@ -13,7 +16,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <a href="#header"><img src="images/logo.png" class="logo"></a>
+                    <a href="#header"><img src="images/Mylogo2.png" class="logo"></a>
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
@@ -77,7 +80,7 @@
                                 <li>
                                     <span>Full Stack Developer Programme - [Pending]</span><br>
                                     Open Learning Platform University of Moratuwa <br><br>
-                                    <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="images/UOM Certificates.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
                                     <span>AI / ML Engineer (Stage 01) - [Pending]</span><br>
@@ -97,17 +100,17 @@
                                 <li>
                                     <span>Web Development </span><br>
                                     Sololearn  <br><br>
-                                    <a href="https://shorturl.at/nxJX2" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="images/Sololearn Web-Development Certificate.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
                                     <span>Skill Tests (SQL, JavaScript, CSS) </span><br>
                                     HackerRank  <br><br>
-                                    <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="images/HackerRank Certificates.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
                                     <span>Angular, Java, JavaScript, Python, SQL</span>
                                     <br>Sololearn  <br><br>
-                                    <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="images/Sololearn Certificates.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                             </ul>
                         </div>
