--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <a href="#header"><img src="images/Mylogo2.png" class="logo"></a>
+                    <img src="images/Mylogo2.png" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
