--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <li>
                                     <span>Fundementals of Digital Marketing </span><br>
                                     Google Digital Garage  <br><br>
-                                    <!-- <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br> -->
+                                    <a href="https://skillshop.exceedlms.com/student/award/XePQ7YDPfKvRooXR6tAtrP8q" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
                                     <span>Web Development </span><br>
