--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <li>
                                     <span>Web Development </span><br>
                                     Sololearn  <br><br>
-                                    <a href="images/Sololearn Web-Development Certificate.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="https://www.sololearn.com/certificates/CC-TTND05XK" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
                                     <span>Skill Tests (SQL, JavaScript, CSS) </span><br>
