--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                                 <li>
                                     <span>Fundementals of Digital Marketing </span><br>
                                     Google Digital Garage  <br><br>
-                                    <a href="https://skillshop.exceedlms.com/student/award/XePQ7YDPfKvRooXR6tAtrP8q" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="https://skillshop.exceedlms.com/student/award/XePQ7YDPfKvRooXR6tAtrP8q" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificate</a><br><br>
                                 </li>
                                 <li>
                                     <span>Web Development </span><br>
                                     Sololearn  <br><br>
-                                    <a href="https://www.sololearn.com/certificates/CC-TTND05XK" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
+                                    <a href="https://www.sololearn.com/certificates/CC-TTND05XK" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificate</a><br><br>
                                 </li>
                                 <li>
                                     <span>Skill Tests (SQL, JavaScript, CSS) </span><br>
