--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
-                            <p class="tab-links" onclick="opentab('certifications')">Proffesional Certifications</p>
+                            <p class="tab-links" onclick="opentab('certifications')">Certifications</p>
                             <!-- <p class="tab-links" onclick="opentab('experience')">Experience</p> -->
                         </div>
                         <div class="tab-contents active-tab" id="skills">
@@ -93,9 +93,14 @@
                                     <!-- <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br> -->
                                 </li>
                                 <li>
+                                    <span>Postman API Fundamentals Student Expert </span><br>
+                                    Postman <br><br>
+                                    <a href="images/Postman API Fundamentals Student Expert.PNG" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificate</a><br><br>
+                                </li>
+                                <li>
                                     <span>Fundementals of Digital Marketing </span><br>
                                     Google Digital Garage  <br><br>
-                                    <a href="https://skillshop.exceedlms.com/student/award/XePQ7YDPfKvRooXR6tAtrP8q" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificate</a><br><br>
+                                    <a href="images/Fundementals of Digital Marketing.PNG" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificate</a><br><br>
                                 </li>
                                 <li>
                                     <span>Web Development </span><br>
