--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@
                                 provides real-time price information for items and store changes. It includes
                                 login and registration processes for store owners and customers, basic CRUD
                                 operations, and calculation</p>
-                            <a href="https://bit.ly/3Un3VtC" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="https://github.com/Rusith-S/Food-Price-Tracker-Mobile-Application" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
                         <img src="images/web 1.jpg">
                         <div class="layer">
-                            <h3>Inventory Management System for Colombo District Scout Association</h3>
+                            <h3>Scout Membership Management System for Colombo District Scout Association</h3>
                             <p>The group project, developed in the 2nd year of the 2nd
                                 semester for the information technology project module, includes an
                                 inventory management system with separate login and registration for
                                 administration and scout users. The system includes basic CRUD operations,
                                 calculations, and special functions like report generation.
                                 </p>
-                            <a href="https://bit.ly/48RtZBv" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="https://github.com/Rusith-S/Scout-Membership-Management-System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -231,7 +231,7 @@
                                 of the Internet and Web Technologies module. In this application, we
                                 developed Login and Register, basic CRUD operations, and calculations.                            
                             </p>
-                            <a href="https://bit.ly/42pyW1Y" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="https://github.com/Rusith-S/RR-Parking-Automated-Car-Parking-System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                             <a href="https://bit.ly/3vX5nIX" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                             <a href="https://bit.ly/48WdkN4" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
                             <a href="https://bit.ly/3DiDN9t" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://bit.ly/3wcZmYA" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://shorturl.at/puwzH" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                         <a href="images/Rusith Sashika Resume.pdf" download  class="btn btn2">Download My Resume</a>
                     </div>
