--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <a href="https://bit.ly/3DiDN9t" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://shorturl.at/puwzH" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
-                        <a href="images/Rusith Sashika Resume.pdf" download  class="btn btn2">Download My Resume</a>
+                        <a href="images/Rusith_Sashika_CV.pdf" download  class="btn btn2">Download My CV</a>
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
