--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="tab-contents" id="certifications">
                             <ul>
                                 <li>
-                                    <span>Full Stack Developer Programme - [Pending]</span><br>
+                                    <span>Full Stack Developer Programme - [Ongoing]</span><br>
                                     Open Learning Platform University of Moratuwa <br><br>
                                     <a href="images/UOM Certificates.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
