--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <a href="images/UOM Certificates.pdf" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br>
                                 </li>
                                 <li>
-                                    <span>AI / ML Engineer (Stage 01) - [Pending]</span><br>
+                                    <span>AI / ML Engineer (Stage 01) - [Ongoing]</span><br>
                                     Industry Engagement Unit - SLIIT <br><br>
                                     <!-- <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br> -->
                                 </li>
