--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     <!-- <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br> -->
                                 </li>
                                 <li>
-                                    <span> Front-End Developer Professional Certificate - [Pending]</span><br>
+                                    <span> Front-End Developer Professional Certificate - [Ongoing]</span><br>
                                     IBM  <br><br>
                                     <!-- <a href="https://bit.ly/49fGiId" target="_blank"><i class="fa-solid fa-certificate"></i> View Certificates</a><br><br> -->
                                 </li>
