--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                             <a href="https://bit.ly/3vX5nIX" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                             <a href="https://bit.ly/48WdkN4" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
                             <a href="https://bit.ly/3DiDN9t" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://shorturl.at/puwzH" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/Rusith-S" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                         <a href="images/Rusith_Sashika_CV.pdf" download  class="btn btn2">Download My CV</a>
                     </div>
