--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="images/Mylogo2.png" class="logo">
+                    <a href="#header"><img src="images/download (1).png" class="logo"></a>
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="#services">Insights</a></li>
                         <li><a href="#portfolio">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
@@ -28,9 +28,10 @@
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 </nav>
                 <div class="header-text">
-                    <p>Full Stack Developer</p>
+                    
                     <h1>Hi, I'm <span class="typing-animation">R </span><span class="typing-animation">u</span><span class="typing-animation">s</span><span class="typing-animation">i</span><span class="typing-animation">t</span><span class="typing-animation">h&nbsp;</span><span class="typing-animation">S</span><span class="typing-animation">a</span><span class="typing-animation">s</span><span class="typing-animation">h</span><span class="typing-animation">i</span><span class="typing-animation">k</span><span class="typing-animation">a</span><br> From Malabe 
                         <!-- <br>Sri Lanka--></h1> 
+                        <p>Information Technolgy Undergraduate</p>
                 </div>
             </div>
         </div>
@@ -59,10 +60,10 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>UI/UX</span><br>Desining web/APP interfaces</li>
-                                <li><span>Full stack Web Application Development</span><br>Web app Development</li>
-                                <li><span>Full stack Mobile App Development</span><br>Building Android/ios apps</li>
-                                <li><span>Communication</span><br>Fluent in English and Sinhala languages</li>
+                                <li><span>UI/UX</span><br>Desining web/APP interfaces</li><br>
+                                <li><span>Full stack Web Application Development</span><br>Web app Development</li><br>
+                                <li><span>Full stack Mobile App Development</span><br>Building Android/ios apps</li><br>
+                                <li><span>Communication</span><br>Fluent in English and Sinhala languages</li><br>
                                 <li><span>Self-learning</span><br>Strong Self Learner</li>
                             </ul>
                         </div>
@@ -70,8 +71,8 @@
                             <ul>
                                 <li><span>BSc (Hons) in Information Technology Specializing in Information
                                     Technology(SLIIT)
-                                    </span><br>2021 - Present</li>
-                                <li><span>GCE Advanced Level</span><br>2020</li>
+                                    </span><br>2021 - Present</li><br>
+                                <li><span>GCE Advanced Level</span><br>2020</li><br>
                                 <li><span>GCE Ordinary Level</span><br>2017</li>
                             </ul>
                         </div>
@@ -136,7 +137,7 @@
 
         <div id="services">
             <div class="container">
-                <h1 class="sub-title">My services</h1>
+                <h1 class="sub-title">Areas I Learned so far ....</h1>
                 <div class="services-list">
                     <div>
                         <i class="fa-solid fa-crop"></i>
@@ -157,12 +158,33 @@
                         </p>
                     </div>
                     <div>
-                        <i class="fa-brands fa-app-store"></i>
+                        <i class="fa fa-code" aria-hidden="true"></i>
                         <h2>Back-end Web Development</h2>
                         <p>  
                             In Back-end Web Development, I excel at building robust and efficient server-side solutions that power the seamless functioning of websites and applications. 
                             Through proficiency in languages like Python, Node.js, and database management systems, I architect scalable and secure back-end systems. 
                             My portfolio showcases a diverse range of projects, highlighting my ability to tackle complex challenges and deliver reliable server-side solutions that contribute to the overall performance and success of web applications.
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fa fa-database" aria-hidden="true"></i>
+                        <h2>Database Management</h2>
+                        <p>  
+                            I have developed proficiency in various database tools and technologies, including MySQL, MongoDB, Firebase, and Power BI. This experience includes designing, managing, and querying relational databases with MySQL, working with NoSQL databases like MongoDB for flexible data storage, and utilizing Firebase for real-time data synchronization. Additionally, I have used Power BI for data visualization and business intelligence, enabling effective analysis and reporting of data insights.
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                        <h2>Software Quality Assuarance</h2>
+                        <p>  
+                            As an undergraduate IT student with practical experience in software development, I have developed a strong foundation in software quality assurance. My involvement in projects like the Food Price Tracker Mobile Application and the Scout Membership Management System has honed my skills in testing, bug identification, and ensuring application reliability. With proficiency in languages such as Java, JavaScript, and Python, I am adept at understanding and executing test cases, contributing to effective QA processes, and maintaining high software quality standards.
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fa fa-cloud" aria-hidden="true"></i>
+                        <h2>Cloud Computing</h2>
+                        <p>  
+                            I have acquired a solid understanding of cloud computing concepts, including the fundamentals of virtualization, cloud architecture, and deployment models. This involves learning about different cloud service models such as Infrastructure as a Service (IaaS), Platform as a Service (PaaS), and Software as a Service (SaaS). I have explored how to leverage cloud platforms like AWS, Azure, and Google Cloud for scalable and cost-effective solutions. Additionally, I have gained experience in managing cloud resources, optimizing performance, and ensuring security and compliance in cloud environments. This knowledge enhances my ability to design and implement cloud-based solutions efficiently.
                         </p>
                     </div>
                 </div>
