--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <img src="images/Food Price Tracker.jpg">
                         <div class="layer">
                             <h3>Food Price Tracker Mobile App</h3>
-                            <p>In the 2nd year, 2nd semester of the Mobile Application Development module, a team of four developed the Food Price Tracker Mobile Application using Kotlin and Firebase. Built with Android Studio, the app provides real-time price information for food items, tracks price changes, and supports secure login for store owners and customers. It features CRUD operations for data management and price comparison, empowering users to make informed purchasing decisions. This project showcases the team's expertise in mobile app development and delivers a practical tool for cost-effective food shopping.
+                            <p>In the 2nd year, 2nd semester of the Mobile Application Development module, a team of four developed the Food Price Tracker Mobile Application using Kotlin and Firebase. Built with Android Studio, the app provides real-time price information for food items, tracks price changes, and supports secure login for store owners and customers.
                             </p>
                             <a href="https://github.com/Rusith-S/Food-Price-Tracker-Mobile-Application" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
@@ -210,7 +210,7 @@
                         <img src="images/Scout Membership Management System.jpeg">
                         <div class="layer">
                             <h3>Scout Membership Management System for Colombo District Scout Association</h3>
-                            <p>In the 2nd year, 2nd semester IT Project module, the team developed an inventory management system with Node.js, Express.js, React.js, SCSS, and MongoDB. Key features include secure role-based login, CRUD operations, stock calculations, and report generation, showcasing expertise in modern web technologies.
+                            <p>In the 2nd year, 2nd semester IT Project module, the team developed an inventory management system with Node.js, Express.js, React.js, SCSS, and MongoDB.
                             </p>
                             <a href="https://github.com/Rusith-S/Scout-Membership-Management-System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
@@ -219,7 +219,7 @@
                         <img src="images/UI UX Design.jpg">
                         <div class="layer">
                             <h3>Redesign UI/UX Blinkee.com</h3>
-                            <p>In the 3rd year Human-Computer Interaction module, our project focused on improving UI/UX for Blinkee.com. We used Figma for redesign and Mockflow for prototyping, addressing interface and usability issues to enhance user satisfaction and engagement. This project demonstrates our commitment to human-centered design principles for a better online experience.</p>
+                            <p>In the 3rd year Human-Computer Interaction module, our project focused on improving UI/UX for Blinkee.com. We used Figma for redesign and Mockflow for prototyping, addressing interface and usability issues to enhance user satisfaction and engagement.</p>
                             <a href="https://bit.ly/48XkFvS" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <img src="images/RR Parking Automated Car Parking System.jpeg">
                         <div class="layer">
                             <h3>RR Parking Automated Car Parking System</h3>
-                            <p>The RR Parking Automated Car Parking System, developed in the 1st year, 2nd semester for the Internet and Web Technologies module, is a collaborative project by five contributors. Built with HTML, CSS, PHP, and MySQL, the web application simplifies parking management with user authentication, CRUD operations, and space reservation features. It also automates parking duration and fee calculations, showcasing the team's web development skills and delivering an efficient, user-friendly parking solution.
+                            <p>The RR Parking Automated Car Parking System is a collaborative project by five contributors. Built with HTML, CSS, PHP, and MySQL, the web application simplifies parking management with user authentication, CRUD operations, and space reservation features.
                             </p>
                             <a href="https://github.com/Rusith-S/RR-Parking-Automated-Car-Parking-System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
@@ -236,7 +236,7 @@
                         <img src="images/Fitness social media.jpeg">
                         <div class="layer">
                             <h3>Fitness Social Media Platform</h3>
-                            <p>Designed and implemented a social media platform for fitness enthusiasts during the [specific semester/year]. This project involved developing a RESTful API using Spring Boot for user authentication and post management, including features for photo and video uploads, workout plans, and meal plans. The client-side web application, built with React, provided an intuitive interface for user interactions such as likes and comments. The project highlighted skills in modern web development frameworks and best practices for creating secure, scalable applications.                          
+                            <p>This project involved developing a RESTful API using Spring Boot for user authentication and post management, including features for photo and video uploads, workout plans, and meal plans. The client-side web application, built with React, provided an intuitive interface for user interactions such as likes and comments.             
                             </p>
                             <a href="https://github.com/Rusith-S/Social-media-platform-tailored-for-fitness-enthusiast" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
@@ -245,7 +245,7 @@
                         <img src="images/Module Management System web application.jpeg">
                         <div class="layer">
                             <h3>A Role-Based Project Module Management System</h3>
-                            <p>Developed a Project Module Management System for university project assessments. This system supports roles such as coordinators, members, examiners, and supervisors, with features for managing presentations, reports, marks, and research publications. It improves efficiency in project management and assessment, adhering to security best practices and designed for scalability and performance.
+                            <p>Developed a Project Module Management System for university project assessments. This system supports roles such as coordinators, members, examiners, and supervisors, with features for managing presentations, reports, marks, and research publications.
                             </p>
                             <a href="https://github.com/IT21288326/Module-Management-System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
